--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				  	<button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Personil</button>
 				  	<div class="dropdown-content">
 					    <a href="profil-bagas.html">Andik</a>
-					    <a href=".html">Ciko</a>
+					    <a href="https://fransiscordg.github.io/link/.html">Ciko</a>
 					    <a href="profil-rifqi.html">Zaqqa</a>
 						<a href="profil-rifqi.html">Almira</a>
 				  </div>
