--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 		    	<div class="dropdown">
 				  	<button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Personil</button>
 				  	<div class="dropdown-content">
-					    <a href="profil-bagas.html">Andik</a>
-					    <a href="https://fransiscordg.github.io/link/.html">Ciko</a>
-					    <a href="profil-rifqi.html">Zaqqa</a>
-						<a href="profil-rifqi.html">Almira</a>
+					    <a href="https://aenha.github.io/anh/">Andik</a>
+					    <a href=" https://fransiscordg.github.io/link/">Ciko</a>
+					    <a href="https://ivanzaqqa.github.io">Zaqqa</a>
+						<a href="https://almiradv.github.io/profilmira/">Almira</a>
 				  </div>
 				</div>
 		  	</div>
