--- a/index.html
+++ b/index.html
@@ -67,10 +67,15 @@
 	<h1 class="text-center"><b>Bio Data</b></h1>
   <div class="row">
     <div class="col-sm mb-5 text-justify">
-	<b>Pada Hari Minggu ku turut ayah ke kota Naik delman istimewa ku duduk di muka Ku duduk samping pak kusir yang sedang bekerja Mengendarai kuda supaya baik jalannya</b>
+	    <li><b>History Pendidikan</b></li>
+	    <li><b>Paud = Tadika Mesra</b></li>
+	    <li><b>Tk = Santo Yosep 2</b></li>
+	    <li><b>Sd = SDN Jagalan 1</b></li>
+	    <li><b>SMP = SMP Negeri 2</b></li>
+	    <li><b>SMA = SMAK Santo Augustinus</b></li>
     </div>
     <div class="col-sm mb-5 text-justify">
-      <b>Tuk-tik-tak-tik-tuk tik-tak-tik-tuk tik-tak-tik-tukTuk-tik-tak-tik-tuk tik-tak suara s'patu kuda</b>
+	    <li><b>Saat kamu ingin meraih kesuksesan maka bisa semakin sulit kalau kamu terlalu khawatir dan fokus membayangkan kegagalan-kegagalan yang mungkin akan terjadi. Kalau kamu semakin memikirkan kegagalan itu, justru jalan yang akan kamu terasa terasa semakin berat.</b></li>
     </div>
  </div>
 </div>
